# doShell

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cppcheck_report.txt  package-lock.json  package.json  travis.yml
.github/workflows/: cppcheck.yml  cpplint.yml
doShell/: config.h  config.h.in  main.cpp
doShell/app/: app.cc  app.h  app_argument.cc  app_argument.h  app_command.cc  app_command.h  app_log.h  (+3 more)
examples/: 001_import.do.sh  002_echo_hello.sh  002_macros.do.sh  002_using_macros.do.sh  003_load_url_in_new_browser_tab.do.sh  003_macros.do.sh  003_platform_conditions.do.sh  004_load_url.do.sh  004_load_url_in_new_browser_tab.do.sh  004_random.do.sh  005_search_with_duckduckgo.do.sh  005_string_manipulation.do.sh  005_strings.do.sh  005_use_dev_console.do.sh  006_file_manipulation.do.sh  006_parse_url.do.sh  006_send_page_html_to_shell.do.sh  006_strings_from_files.do.sh  006_use_dev_console.do.sh  007_export_all_script_tags.do.sh  007_get_current_url.do.sh  007_parse_php.do.sh  007_send_page_html_to_shell.do.sh  007_store_clipboard_to_file.do.sh  008_export_all_script_tags.do.sh  008_export_current_url.do.sh  008_get_current_url.do.sh  008_parse_url.do.sh  009_dialogs.do.sh  009_export_all_script_tags.do.sh  009_export_html_comments.do.sh  010_replace_runtime_variables.do.sh  011_dialogs.do.sh  011_dialogs_alert.do.sh  011_parse_php.do.sh  011_use_dev_console.do.sh  013_dialogs_confirm.do.sh  013_swop_domain.do.sh  014_dialogs_prompt.do.sh  015_dialogs.do.sh  (+31 more)
robo/: config.h  config.h.in  main.cpp
test/: import.do.sh
(+132 files in other folders)
